[package]
name = "grepox"
version = "0.2.17"
description = "Minimalist's grep written in Rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/grepox"
repository = "https://github.com/Vonr/grepox"
keywords = ["grep", "search", "cli", "fast", "minimal"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
strip = "symbols"

[dependencies]
regex = "1.6.0"
atty = "0.2.14"
naive_opt = "0.1.18"
linereader = "0.4.0"
mimalloc = { version = "0.1.30", default-features = false }
