[package]
name = "grepox"
version = "0.2.19"
description = "Minimalist's grep written in Rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/grepox"
repository = "https://github.com/Vonr/grepox"
keywords = ["grep", "search", "cli", "fast", "minimal"]
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
strip = "symbols"

[dependencies]
regex = "1.9.1"
regex-automata = "0.3.3"
atty = "0.2.14"
bstr = "1.6.0"
memchr = "2.5.0"

[build-dependencies]
regex-automata = "0.3.3"
