[package]
name = "grepox"
version = "0.2.22"
description = "Minimalist's grep written in Rust."
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Vonr/grepox"
repository = "https://github.com/Vonr/grepox"
keywords = ["grep", "search", "cli", "fast", "minimal"]
edition = "2021"
rust-version = "1.70.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
strip = "symbols"

[dependencies]
regex = "1.9.1"
regex-automata = "0.4.3"
bstr = "1.6.0"
walkdir = "2.4.0"

[build-dependencies]
regex-automata = "0.4.3"
